Fixed text readability

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,6 +15,8 @@
   --ifm-color-primary-lightest: #050219;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  background-image: url("/img/guttykreum_background.png");
+  background-size: cover;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -25,8 +27,10 @@
   --ifm-color-primary-darkest: #1a8870;
   --ifm-color-primary-light: #29d5b0;
   --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary-lightest: #ffffff;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
   background-image: url("/img/guttykreum_background.png");
   background-size: cover;
+  background-color: rgba(0,100,200,.5);
+  background-blend-mode: multiply;
 }
